crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-oscar__src__oscar__templatetags__datetime_filters.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-oscar/src/oscar/templatetags/datetime_filters.py
---
tag_rules: {}
filter_arities:
  "src.oscar.templatetags.datetime_filters::filter::timedelta":
    expects_arg: false
    arg_optional: false
block_specs: {}
