crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-oscar__src__oscar__templatetags__history_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-oscar/src/oscar/templatetags/history_tags.py
---
tag_rules:
  "src.oscar.templatetags.history_tags::tag::get_back_button":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.oscar.templatetags.history_tags::tag::recently_viewed_products":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: current_product
        required: false
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs: {}
