crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-oscar__src__oscar__templatetags__product_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-oscar/src/oscar/templatetags/product_tags.py
---
tag_rules:
  "src.oscar.templatetags.product_tags::tag::render_product":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: product
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
